fixed posotion dropdown-menu and back-arrow on help site z-index

--- a/styles/help.css
+++ b/styles/help.css
@@ -11,11 +11,21 @@ html {
   height: 100vh;
 }
 
+
+/* scrollbar-width: none; Firefox */
+/* -ms-overflow-style: none; IE 10+ */
 .main-content {
   flex-grow: 1;
   height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+ /* Chrome, Safari, Edge */
+.main-content::-webkit-scrollbar {
+  display: none;
 }
 
 /* text */
